@@ -247,6 +247,17 @@ esac],[AC_MSG_RESULT([no])])
 #esac],[AC_MSG_RESULT([no])])
 #AM_CONDITIONAL([RUN_TESTS], [test "$enable_tests" == "yes"])
 
+dnl checking if model runs should be submitted to SGE
+SGE_OPTS=""
+AC_MSG_CHECKING([whether model runs should be submitted to SGE])
+AC_ARG_WITH(sge-jobs,AS_HELP_STRING([--with-sge-jobs],[use Sun Grid Engine to run models]),[
+  SGE_OPTS="-s"
+  if test x"$with_sge_jobs"x != xyesx; then
+    SGE_OPTS="$SGE_OPTS -o \"$with_sge_jobs\""
+  fi 
+  AC_MSG_RESULT([$withval])],[AC_MSG_RESULT([no])])
+AC_SUBST(SGE_OPTS)
+
 # Checking if sources are from subversion
 AC_CHECK_FILE($srcdir/libglimmer/.svn/entries,have_svn_entries="yes",have_svn_entries="no")
 GLIMMER_SVN_VERS=""
@@ -265,7 +276,8 @@ AC_CONFIG_FILES([Makefile m4macros/Makefile scripts/Makefile \
                 tests/EISMINT/EISMINT-1/Makefile  tests/EISMINT/EISMINT-2/Makefile \
                 tests/EISMINT/isos/Makefile  tests/EISMINT/lin-non_lin/Makefile \
                 tests/exact-isothermal/Makefile tests/exact-isothermal/src/Makefile \
-                tests/exact-isothermal/matlab/Makefile tests/exact-isothermal/scripts/Makefile\
+                tests/exact-isothermal/matlab/Makefile tests/exact-isothermal/scripts/Makefile \
+                tests/exact-isothermal/tests/Makefile \
                 example-drivers/eis/Makefile example-drivers/eis/src/Makefile \
                 example-drivers/eis/fenscan/Makefile \
                 example-drivers/EISMINT-3/Makefile example-drivers/EISMINT-3/src/Makefile \
